# TesseractGameEngine

./: CMakeLists.txt  Makefile  README.md  test.bat  test.cpp  test.sh  teste.cpp
core/: analitycs.cpp  analitycs.h  audio.cpp  audio.h  camera.cpp  camera.h  gui.cpp  gui.h  input.cpp  input.h  light.cpp  light.h  matriz.cpp  matriz.h  model.cpp  model.h  polygon.cpp  polygon.h  ponto.cpp  ponto.h  ponto3.cpp  renderer.cpp  renderer.h  scene.cpp  scene.h  tesseract.cpp  tesseract.h  texture.cpp  texture.h  vec3.cpp  vec3.h  window.cpp  window.h
formas/: forma.cpp  forma.h
formas/cilindro/: cilindro.cpp  cilindro.h
formas/cone/: cone.cpp  cone.h
formas/cubo/: cubo.cpp  cubo.h
formas/esfera/: esfera.cpp  esfera.h
matriz/: Makefile  main.cpp  matriz.cpp  matriz.h
pontos/: ponto.cpp  ponto.h  ponto3.cpp  ponto3.h
samples/model_loading/: character.glb  esfere.glb  plane.glb
samples/planets/: BGEarth03_UtanBakgrund_02.mtl  Earth.max  cubo.glb  esfere.mtl
utils/: Vec3.cpp  Vec3.h  camera.cpp  camera.h  input.cpp  input.h  janela.cpp  janela.h  model.cpp  model.h  polygon.cpp  polygon.h
